
add_subdirectory(01_window_example)
add_subdirectory(02_triangle_example)
add_subdirectory(03_indexed_drawing_example)
add_subdirectory(04_colors_example)
add_subdirectory(05_texture1D_example)
add_subdirectory(06_texture2D_example)
add_subdirectory(07_box_example)
add_subdirectory(08_orbit_camera_example)
add_subdirectory(09_grid_3D_example)